# Dice-Chess

./: .gitignore
Backend/: pyproject.toml
Backend/docs/: BackendFlow.md
Backend/src/: RedisGameStore.py  app.py
Docs/: Backend-tips.md  Dice-chess-rules.md  Die-Chess-Algorithms.md
Frontend/: package-lock.json  package.json
Frontend/services/: apiService.js  socketService.js
Frontend/src/: App.jsx
Frontend/src/components/GameRoom/: ChessBoard.jsx  index.jsx
Frontend/src/components/HomeScreen/: CreateCard.jsx  FeatureCard.jsx  Footer.jsx  GameFeatures.jsx  Header.jsx  JoinCard.jsx  RoomActions.jsx  index.js
Frontend/src/components/Screens/: GameScreen.jsx  HomeScreen.jsx  HowToPlay.jsx  WaitingScreen.jsx  index.js
Frontend/src/store/: gameStore.jsx  index.js
Frontend/store/: gameStore.js
